# 2g-nf-interpreter

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  CMake_initial_cache_cfg_M4MCU.cmake  azure-pipelines.yml  chibios_commit-e9d306b  cmake-variants.TEMPLATE.json  cmake-variants.json
CMake/: ChibiOS.CMakeLists.cmake.in  binutils.ChibiOS.cmake  mbedTLS.CMakeLists.cmake.in
CMake/Modules/: FindBuildUtils.cmake  FindCHIBIOS_FATFS.cmake  FindINTEROP-NETIF.cmake  FindINTEROP-Oberon.NaCl.cmake  FindINTEROP-Process.Watchdog.cmake  FindINTEROP-SPOT.MFUpdate.cmake  FindINTEROP-System.IO.FileSystem.cmake  FindINTEROP-USB.Host.cmake
InteropAssemblies/MFUpdate/: MFUpdate.cpp  MFUpdate.h  MFUpdate_MFUpdate_MFNativeUpdate.cpp  MFUpdate_MFUpdate_MFNativeUpdate.h  MFUpdate_MFUpdate_MFNativeUpdate_mshl.cpp
InteropAssemblies/NETIF/: NETIF.cpp  NETIF.h  NETIF_NETIF_MacAddress.cpp  NETIF_NETIF_MacAddress.h  NETIF_NETIF_MacAddress_mshl.cpp
InteropAssemblies/Oberon.NaCl/: Oberon_NaCl.cpp  Oberon_NaCl.h  Oberon_NaCl_Oberon_NaCl_Native.cpp  Oberon_NaCl_Oberon_NaCl_Native.h  Oberon_NaCl_Oberon_NaCl_Native_mshl.cpp  interop.c  interop.h
InteropAssemblies/Oberon.NaCl/bigint/: Bigint.s  bigint.c
InteropAssemblies/Oberon.NaCl/chacha20/: core.c  crypto_core.h  crypto_stream.h  stream.c  xor.c
InteropAssemblies/Oberon.NaCl/curve25519/: base.c  crypto_scalarmult.h  smult.c
InteropAssemblies/Oberon.NaCl/curve25519xsalsa20poly1305/: after.c  before.c  box.c  box_keywrapper.c  keypair.c
InteropAssemblies/Oberon.NaCl/ed25519/: ed25519.c  fe25519.c  ge25519.c  ge25519.h  sc25519.c  sc25519.h  sign_keywrapper.c
InteropAssemblies/Oberon.NaCl/hsalsa20/: core.c  crypto_core.h
InteropAssemblies/Oberon.NaCl/include/: bigint.h  crypto_box_curve25519xsalsa20poly1305.h  crypto_box_keywrapper.h  crypto_core_chacha20.h  crypto_hash_sha512.h  crypto_hashblocks_sha512.h  crypto_onetimeauth_poly1305.h  crypto_secretbox_xsalsa20poly1305.h  crypto_sign_ed25519.h  crypto_sign_keywrapper.h  crypto_stream_chacha20.h  crypto_stream_salsa20.h  crypto_stream_xsalsa20.h  fe25519.h  randombytes.h
InteropAssemblies/Oberon.NaCl/poly1305/: auth.c  crypto_onetimeauth.h  verify.c
InteropAssemblies/Oberon.NaCl/salsa20/: core.c  crypto_core.h  crypto_stream.h  stream.c  xor.c
InteropAssemblies/Oberon.NaCl/sha512/: blocks.c  crypto_hash.h  crypto_hashblocks.h  hash.c
InteropAssemblies/Oberon.NaCl/verify_16/: crypto_verify.h
InteropAssemblies/Oberon.NaCl/verify_32/: crypto_verify.h
InteropAssemblies/Oberon.NaCl/xsalsa20/: crypto_stream.h  stream.c  xor.c
InteropAssemblies/Oberon.NaCl/xsalsa20poly1305/: box.c  crypto_secretbox.h
InteropAssemblies/Process.Watchdog/: Process_Watchdog.cpp  Process_Watchdog.h  Process_Watchdog_Process_Watchdog_Watchdog.cpp  Process_Watchdog_Process_Watchdog_Watchdog.h  Process_Watchdog_Process_Watchdog_Watchdog_mshl.cpp
InteropAssemblies/SPOT.MFUpdate/: SPOT_MFUpdate.cpp  SPOT_MFUpdate.h  SPOT_MFUpdate_SPOT_MFUpdate_MFNativeUpdate.cpp  SPOT_MFUpdate_SPOT_MFUpdate_MFNativeUpdate.h  SPOT_MFUpdate_SPOT_MFUpdate_MFNativeUpdate_mshl.cpp
InteropAssemblies/SPOT.MFUpdate/include/: MFUpdate_decl.h
InteropAssemblies/System.IO.FileSystem/: System_IO_FileSystem.cpp  System_IO_FileSystem.h  System_IO_FileSystem_System_IO_NativeFile.cpp  System_IO_FileSystem_System_IO_NativeFile.h  System_IO_FileSystem_System_IO_NativeFileStream.cpp  System_IO_FileSystem_System_IO_NativeFileStream.h  System_IO_FileSystem_System_IO_NativeFileStream_mshl.cpp  System_IO_FileSystem_System_IO_NativeFile_mshl.cpp
InteropAssemblies/USB.Host/: USB_Host.cpp  USB_Host.h  USB_Host_USB_Host_Info.cpp  USB_Host_USB_Host_Info.h  USB_Host_USB_Host_Info_mshl.cpp
eclipse/: nf_CLR.launch  nf_booter.launch
jenkins-pipelines/: CMake_initial_cache_cfg_M4MCU.cmake  Jenkinsfile  Jenkinsfile_v1  Jenkinsfile_v3
release-files/2G-nextRelease/Own_Libraries/: Oberon.NaCl.pdbx  Oberon.NaCl.pe  Oberon.NaCl.xml  SPOT.MFUpdate.pdbx  SPOT.MFUpdate.pe  SPOT.MFUpdate.xml  System.IO.FileSystem.pdbx  System.IO.FileSystem.pe  System.IO.FileSystem.xml  USB.Host.pdbx  USB.Host.pe  USB.Host.xml
src/CLR/CorLib/: corlib_native_System_DateTime.cpp
src/CLR/Core/: GarbageCollector.cpp  Thread.cpp  TypeSystem.cpp
src/CLR/Diagnostics/: Info.cpp
src/CLR/Include/: nanoCLR_Runtime.h
src/CLR/Messaging/: Messaging.cpp
src/CLR/Startup/: CLRStartup.cpp
src/HAL/: nanoHAL_Watchdog.c
targets/CMSIS-OS/ChibiOS/2G_M4-MCU/: CMakeLists.txt  README.md  board-v1.h  board-v3.h  board.c  board.h  ffconf.h  lwipopts.h  netmf_signature_compat.s  target_BlockStorage.c  target_BlockStorage.h  target_common.h.in  target_external_memory.c  target_external_memory_v1.c  target_external_memory_v3.c  target_nf_devices_can_config.cpp  target_nf_devices_can_config.h  target_nf_devices_onewire_config.cpp  target_nf_devices_onewire_config.h  target_system_devices_dac_config.cpp  target_windows_devices_adc_config.cpp  target_windows_devices_i2c_config.cpp  target_windows_devices_serialcommunication_config.cpp  target_windows_devices_serialcommunication_config.h  target_windows_devices_spi_config.cpp  target_windows_storage_config.h
targets/CMSIS-OS/ChibiOS/2G_M4-MCU/Drivers/: CMakeLists.txt  MX29_FlashDriver_v2.c  MX29_FlashDriver_v2.h  platform_BlockStorage_M4MCU.c
targets/CMSIS-OS/ChibiOS/2G_M4-MCU/MFUpdate_config_PAL/: MFUpdate_config_M4MCU.cpp
targets/CMSIS-OS/ChibiOS/2G_M4-MCU/MicroBooter/: MicroBooter.cpp  MicroBooter.h
targets/CMSIS-OS/ChibiOS/2G_M4-MCU/common/: Device_BlockStorage-DEBUG.c  Device_BlockStorage.c  targetHAL_ConfigurationManager.cpp  usbcfg.c
targets/CMSIS-OS/ChibiOS/2G_M4-MCU/nanoBooter/: NanoBooterEntry.cpp  NanoBooterEntry.h  STM32F407xI_booter-DEBUG.ld  STM32F427xI_booter-DEBUG.ld  STM32F427xI_booter.ld  halconf.h  halconf_nf.h  main.c  mcuconf.h  mcuconf_nf.h
targets/CMSIS-OS/ChibiOS/2G_M4-MCU/nanoCLR/: STM32F407xI_CLR-DEBUG.ld  STM32F407xI_CLR.ld  STM32F427xI_CLR-DEBUG.ld  STM32F427xI_CLR.ld  chconf.h  halconf.h  halconf_community.h  halconf_nf.h  main.c  mcuconf.h  mcuconf_community.h  mcuconf_nf.h
(+48 files in other folders)
